fix test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest  # windows-latest, macos-latest
     steps:
       - name: Show files
-        uses: ls -lt
+        run: ls -lt
 
       - name: Checkout
-        uses: actions/checkout@v4
+        run: actions/checkout@v4
 
       - name: Setup python
         uses: actions/setup-python@v4
