--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Show files
+        run: ls -lt
+
       - name: Setup python
         uses: actions/setup-python@v4
         with:
@@ -32,7 +35,7 @@ jobs:
         run: pip install poetry
 
       - name: Change path
-        run: cd python-lib
+        run: cd python-actions-template/python-lib
 
       - name: Show files
         run: ls -lt
