--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,13 @@ jobs:
     runs-on: ubuntu-latest  # windows-latest, macos-latest
     steps:
       - name: Show files
-        run: ls -lt
+        run: ls -la
 
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Show files
-        run: ls -lt
+        run: ls -la
 
       - name: Setup python
         uses: actions/setup-python@v4
@@ -35,10 +35,10 @@ jobs:
         run: pip install poetry
 
       - name: Change path
-        run: python-lib/python-lib
+        run: python-lib
 
       - name: Show files
-        run: ls -lt
+        run: ls -la
 
       - name: Install lib
         run: poetry install
