--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Show files
         run: ls -la
 
+      - name: Change path
+        run: cd python-lib
+
       - name: Install lib
         run: poetry install
 
