add find statement

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Find file
+        run: find f -type f -iname pyproject.toml 
+
       - name: Show files
         run: ls -la
 
