--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,6 @@ jobs:
   run-pytest-linux:
     runs-on: ubuntu-latest  # windows-latest, macos-latest
     steps:
-      - name: Show files
-        run: ls -la
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -38,10 +35,7 @@ jobs:
         run: cd python-lib
 
       - name: Show files
-        run: ls -la
-
-      - name: Change path
-        run: cd python-lib
+        run: ls -R
 
       - name: Install lib
         run: poetry install
